--- a/bloggo/posts/templates/posts/about.html
+++ b/bloggo/posts/templates/posts/about.html
@@ -1,5 +1,8 @@
-<h2>About</h2>
-<p>
-    Bloggo is the best blog engine ever and it's gonna make me fifty trillion dollars!
-    <!-- Put your content here -->
-</p>
+{% extends 'posts/base.html' %}
+{% block content %}
+    <h2>About</h2>
+    <p>
+        Bloggo is the best blog engine ever and it's gonna make me fifty trillion dollars!
+        <!-- Put your content here -->
+    </p>
+{% endblock %}
